fixed full screen size on iphone

--- a/assets/style.css
+++ b/assets/style.css
@@ -57,7 +57,6 @@ body {
     width: 95%;
     height: 40px;
     background-color:rgb(66, 66, 66) ;
-    border-radius: 50px;
     margin-top: 20px;
    
 }
@@ -685,6 +684,9 @@ hr {
 @media screen and (max-width: 500px){
 
 
+   
+
+
     .signup-form {
         width: 230px;
 
@@ -739,8 +741,9 @@ hr {
      }
 
      .logo img {
-         width: 300px;
-         height: 90px;
+         width: 200px;
+         height: 70px;
+         margin-left: 0%;
      }
 
      .main-img img {
@@ -819,7 +822,7 @@ hr {
         float: left;
         margin-right: 70px;
         width: 100%;
-        font-size: 30px;
+        font-size: 25px;
         margin-top: 10px;
         border-bottom: 1px solid #00adb5;
     }
